# kafka

kafka/: README.md  compose.yml
kafka-prac/: .env  compose.yml  pyproject.toml
kafka-prac/kafka_prac/: db.py  main.py  setting.py  todo.proto  todo_pb2.py
kafka/microservice_02/: pyproject.toml
kafka/todo/: pyproject.toml
kafka/todo/todo/: main.py
kafka_messaging/: compose.yaml
kafka_messaging/product_service/: .env  pyproject.toml
kafka_messaging/product_service/product_service/: db.py  main.py  models.py  setting.py
kafka_messaging/user-service/: pyproject.toml
kafka_messaging/user-service/user_service/: main.py
